2008-02-18  Mark Ellis  <mark@mpellis.org.uk>

	* add .so man pages to 'real' pages
	* point to synce.7, not synce.1
	* more error codes

2008-02-11  Mark Ellis  <mark@mpellis.org.uk>

	* more fully populate SynceInfo with odccm & hal

2008-01-09  Mark Ellis  <mark@mpellis.org.uk>

	* added LICENSE to EXTRA_DIST
	* added hal support to synce_info_new()
	* make (v)dccm file support optional (default=yes)

2007-09-06  Mark Ellis  <mark@mpellis.org.uk>

	* modified synce_info_new()
	  - optional parameter is now device name, not path
	  - if device name is NULL, uses first device found by odccm
	       or active device with vdccm
	  - with non-NULL name, looks for that device
	
2007-08-29  Mark Ellis  <mark@mpellis.org.uk>

	* started Changelog !
	* return from synce_strerror should be const
	* added man pages for functions in synce.h